--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/hammerjs/hammer.min.js"
+            ]
           }
         },
         "lint": {
